2001-08-22  Kevin Vandersloot <kfv101@psu.edu>

	Ability to save colors

	* procman.h: the config variables for the colors are now
	GdkColors

2001-08-22  Kevin Vandersloot <kfv101@psu.edu>

	Some UI to change the cpu/mem/swap colors. Still need to
	save to disk though

	* callbacks.c cb_[cpu,mem,swap]_color_changed: callback for
	the gnome color pickers, change the current colors

	* interface.c: add the color pickers. Add the swap used label
	as a caption to the now Memory / Swap graph.

	* load-graph.c: # of colors is now g->n + 2 ie one for each
	graphed item, one for background and one for frame. Draw frame
	after data so it is on top. calculate swap in get_memory

	* procman.c: new config variable for the swap color.

	* procman.h: move the LoadGraph structure here.

2001-08-21  Kevin Vandersloot <kfv101@psu.edu>

	Configurable colors for the graphs. Need to add UI in the
	settings dialog still.
	* procman.[c,h]: add config values for colors

	* callbacks.c: add a FIXME about using gnome_url_show

	* interface.c: update the calls to loag_graph_new
	passing the colors

	* load_graph.c: do the color dance

2001-08-21  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: change the "" to NULL in the UIINFOs as that
	seemed to cause problems

2001-08-20  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: fix the bug where the graph would initialize the data
	on first view. Save the old data in the update not in the drawing.
	Chnage the g_return_if_fail to a regular return since I know
	why this routine is called after disp is NULL and it is harmless. 

	* util.c: remove some ddebugging stuff

	* procdialogs.c: make the entry default to focus, and the enter
	button be default

	* interface.c: make the frame labels for the cpu and mem graphs
	be centered

2001-08-19  Kevin Vandersloot <kfv101@psu.edu>

	* util.c: get the root stuff working! No need to do an extra
	fork. The problem was that exit was being called earlier on