@@ -1,5 +1,12 @@
 2001-08-22  Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c: add a new column to the disks showing used space.
+	center justify each element in the disk list.
+
+	* procman.c: add default colors
+
+2001-08-22  Kevin Vandersloot <kfv101@psu.edu>
+
 	Ability to save colors
 
 	* procman.h: the config variables for the colors are now
